k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: papa-pasta-fnd
  namespace: fnd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: fnd.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: papa-pasta-fnd
                port:
                  number: 80
